# cynnypp

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  deps.sh  jenkinsScript.sh
cmake/modules/: FindCatch.cmake
docs/: CMakeLists.txt
include/: async_fs.hpp
include/cynnypp/: bloom_filters.hpp  swapping_buffer.hpp
src/: CMakeLists.txt  main.cpp
src/bloom_filters/: bloom_filters.hpp  counting_bloom_filters.hpp
src/file_system/: fs_manager.cpp  fs_manager.h  fs_manager_interface.h
src/io/: locales.cpp  locales.h
src/io/async/fs/: CMakeLists.txt  fs_manager.cpp  fs_manager.h  fs_manager_interface.h
src/io/async/swap/: CMakeLists.txt  chunked_readers.cpp  chunked_readers.h  swapping_buffer.cpp  swapping_buffer.h  swapping_buffer_append.cpp  swapping_buffer_append.h  swapping_buffer_overwrite.cpp  swapping_buffer_overwrite.h
src/signal/: bus.hpp  signal.hpp
src/utilities/: event.cpp  event.h  locales.cpp  locales.h
test/: CMakeLists.txt
test/bloom_filters/: bloom_filters.cpp  counting_bloom_filters.cpp
test/file_system/: chunked_reader.cpp  chunked_reader.tmp  test_asynchronous.cpp  test_asynchronous.tmp  test_synchronous.cpp
test/file_system/data/copy/: cp1  cp3
test/file_system/data/copy/cpdir/: 2
test/file_system/data/exists/: linkfile
test/file_system/data/move/: mv1  mv3
test/file_system/data/read/: .directory  linktomultiplea  prova.txt
test/mocks/: mock_filesystem.cpp  mock_filesystem.h
test/signal/: signal.cpp
test/swap/: swapping_buffer.cpp
